<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome"
    android:padding="16dp">

    <!-- Application Name -->
    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/visionary"
        android:textColor="#111418"
        android:textSize="32sp"
        android:textStyle="bold" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/app_subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/your_personal_goal_setting_app"
        android:textColor="#757575"
        android:textSize="24sp" />

    <!-- Sign In Button -->
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#56A7F6"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="8dp"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />



</RelativeLayout>
