<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fillViewport="true">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <!-- Back Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:paddingBottom="16dp">

            <ImageButton
                android:id="@+id/backButtonOnSignInPage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/back"
                android:elevation="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/back"
                app:tint="@color/black"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/pick_a_username"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />



    <!-- Username Input -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="#111418"
        android:textColorHint="#D6D6D6"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Continue Button -->
    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="#56A7F6"
        android:elevation="6dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:onClick="signInClicked"
        android:text="@string/continueText"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>
