<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome"
    tools:context=".MainActivity">




    <!-- Application Name -->
    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/visionary"
        android:textColor="#111418"
        android:textSize="32sp"
        android:textStyle="bold" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/app_subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/your_personal_goal_setting_app"
        android:textColor="#757575"
        android:textSize="20sp" />

    <!-- Buttons Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp">

        <!-- Create Button -->
        <Button
            android:id="@+id/create_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/create_visionboard"
            android:backgroundTint="#56A7F6"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- History Button -->
        <Button
            android:id="@+id/history_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/history"
            android:backgroundTint="#56A7F6"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/create_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
